--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 
 <div style="width: 100%">
-  <table style="margin-top: 30px;width: 100%;" cellspacing="15px">
+  <table style="width: 100%;" cellspacing="15px">
     <tr>
       <td style="vertical-align: top;text-align:justify;margin-left: 10px;font-family: arial;font-size:30px;">
         The drug monitoring program (DMP) was designed as a dissemination tool for drug prescription and dispensation
@@ -8,7 +8,7 @@
         statistics are calculated and made available here. Various reports are also available under our publications section.
       </td>
       <td style="width: 55%;">
-        <div style="border: 1px solid black; border-radius:10px;height: 600px;">
+        <div style="border: 1px solid #000000; border-radius:10px;height: 600px;">
 
         </div>
       </td>
