--- a/app/views/layouts/unlogged.html.erb
+++ b/app/views/layouts/unlogged.html.erb
@@ -1,43 +1,88 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-  <title>DrugMonitoringProgram</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-  <style>
-      span{
-          color: #ffffff;
-          font-size: 35px;
-          margin-left: 20px;
-          font-family: arial;
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>DMP</title>
+  <style type="text/css">
+      html, body {
+          margin:0;
+          padding:0;
+          height:100%
+      }
+      h1, p { margin:0 0 1em }
+      #header {
+          position:fixed;
+          width:100%;
+          left:0;
+          top:0;
+          background: #15191C;
+          height:100px;
 
       }
-      span.title{
-          margin-left: 35px;
-          font-weight: bold;
+      #footer {
+          bottom:0;
+          top:auto;
+          position:fixed;
+          width:100%;
+          left:0;
+          background:#15191C;
+          height:50px;
+
       }
+      #content {
+          position:absolute;
+          top:100px;
+          bottom:50px;
+          width:100%;
+          background:#ffffff;
+          overflow:auto;
+      }
+
+      td.link{
+
+          color: #92CD00;
+          font-size: 23px;
+          height: 30px;
+          width: 200px;
+          font-family: arial;
+          cursor: pointer;
+          border-width: 0px 0px 0px 1px;
+          border-style: solid;
+          border-color: #f5f5f5;
+          text-align: center;
+      }
+      .link:hover{
+          background-color: silver;
+          color: #000000;
+      }
+      table.menu{
+          float: right;
+          height: 100%;
+      }
+
   </style>
 </head>
-<body >
 
-<div style="width: 1400px;text-align: center;margin-left: auto;margin-right: auto;">
-
-  <div style="text-align: left">
-  <span style="font-size: 65px;color: black;margin-left: 0px;font-family:arial; ">
-    Drug Monitoring Program
-  </span>
-  </div>
-  <div style="text-align:left;height: 70px; border-radius: 15px;border: 1px solid #ffffff; background: purple;">
-    <div style="vertical-align:middle;display:table-cell;height: 70px;">
-      <span class="title">Home</span>
-      <span class="title">Publications</span>
-      <span class="title">Login</span>
-    </div>
-  </div>
-  <%= yield %>
+<body>
+<div id="header">
+           <span style="font-size: 45px;color: #C0C0C0;font-family:arial;">
+            Drug Monitoring Program
+          </span>
+  <img src="/images/rails.png" style="float: left;margin-top: 5px;margin-left: 5px;">
+  <table class="menu" cellspacing="0px">
+    <tr>
+      <td class="link" onmousedown="window.location='/'">Home</td>
+      <td class="link" onmousedown="window.location='/publication/index'">Publications</td>
+      <td class="link" onmousedown="window.location= '/user/login'">Login</td>
+    </tr>
+  </table>
 </div>
 
+<div id="content">
+  <%= yield %>
+</div>
+<div id="footer">
 
+</div>
 </body>
 </html>
