--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,78 +3,35 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>DMP</title>
-  <style type="text/css">
-      html, body {
-          margin:0;
-          padding:0;
-          height:100%
-      }
-      h1, p { margin:0 0 1em }
-      #header {
-          position:fixed;
-          width:100%;
-          left:0;
-          top:0;
-          background: #15191C;
-          height:100px;
-
-      }
-      #footer {
-          bottom:0;
-          top:auto;
-          position:fixed;
-          width:100%;
-          left:0;
-          background:#15191C;
-          height:50px;
-
-      }
-      #content {
-          position:absolute;
-          top:100px;
-          bottom:50px;
-          width:100%;
-          background:#ffffff;
-          overflow:auto;
-      }
-
-      td.link{
-
-          color: #92CD00;
-          font-size: 23px;
-          height: 30px;
-          width: 200px;
-          font-family: arial;
-          cursor: pointer;
-          border-width: 0px 0px 0px 1px;
-          border-style: solid;
-          border-color: #f5f5f5;
-          text-align: center;
-      }
-      .link:hover{
-          background-color: silver;
-          color: #000000;
-      }
-      table.menu{
-          float: right;
-          height: 100%;
-      }
-
-  </style>
+  <script type="text/javascript">
+     function setup()
+     {
+        <% if User.current.user_role.role.role != "Administrator" %>
+            document.getElementById('items').deleteCell(3);
+        <% end %>
+     }
+  </script>
+  <%= javascript_include_tag 'jquery' %>
+  <script language="javascript" type="text/javascript" src="/javascripts/jquery.ui.draggable.js"></script>
+  <script language="javascript" type="text/javascript" src="/javascripts/jquery.alerts.js"></script>
+  <script language="javascript" type="text/javascript" src="/javascripts/application.js"></script>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/application.css" />
+  <link href="/stylesheets/jquery.alerts.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
 
-<body>
-<div id="header">
+<body style="width:1050px;" onload="setup()">
+<div  id="header">
            <span style="font-size: 45px;color: #C0C0C0;font-family:arial;">
             Drug Monitoring Program
           </span>
   <img src="/images/rails.png" style="float: left;margin-top: 5px;margin-left: 5px;">
   <table class="menu" cellspacing="0px">
-    <tr>
+    <tr id="items">
       <td class="link" onmousedown="window.location='/'">Home</td>
       <td class="link" onmousedown="window.location= '/report/index'">Report</td>
       <td class="link" onmousedown="window.location='/publication/index'">Publications</td>
-      <td class="link" onmousedown="window.location= '/user/login'">Login</td>
+      <td class="link" onmousedown="window.location='/administration/index'" >Administration</td>
+      <td class="link" onmousedown="window.location= '/user/logout'">Logout</td>
     </tr>
   </table>
 
