--- a/app/views/layouts/unlogged.html.erb
+++ b/app/views/layouts/unlogged.html.erb
@@ -2,6 +2,10 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <%= javascript_include_tag 'jquery' %>
+  <script language="javascript" type="text/javascript" src="/javascripts/jquery.ui.draggable.js"></script>
+  <script language="javascript" type="text/javascript" src="/javascripts/jquery.alerts.js"></script>
+
   <title>DMP</title>
   <style type="text/css">
       html, body {
@@ -69,13 +73,6 @@
             Drug Monitoring Program
           </span>
   <img src="/images/rails.png" style="float: left;margin-top: 5px;margin-left: 5px;">
-  <table class="menu" cellspacing="0px">
-    <tr>
-      <td class="link" onmousedown="window.location='/'">Home</td>
-      <td class="link" onmousedown="window.location='/publication/index'">Publications</td>
-      <td class="link" onmousedown="window.location= '/user/login'">Login</td>
-    </tr>
-  </table>
 </div>
 
 <div id="content">
