--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -1,43 +1,7 @@
 <style type="text/css">
 
-    div.col1 {
-        width: 30%;
-        float: left;
-        height: 85%;
-
-    }
-    div.col2outer {
-        width: 69%;
-        float: right;
-        margin: 0;
-        padding: 0;
-        height: 85%;
-
-    }
-    div.col2 {
-        width: 50%;
-        float: right;
-        height: 100%;
-
-    }
-    div.col3 {
-        width: 49%;
-        float: left;
-        height: 100%;
-
-    }
-    div.headings{
-       width: 350px;
-       border: 5px solid #000000;
-       border-radius: 15px;
-       height: 50px;
-       text-align: justify;
-       margin-right: auto;
-       margin-left: auto;
-       font-size:28px;
-       font-family: arial;
-       overflow: auto;
-       color: #FFFFFF;
+    td{
+        text-align: center;
     }
 </style>
 
@@ -46,33 +10,25 @@
   <hr>
 </div>
 
-<div class="col1">
-  <div style="background:#83831F;text-align: center;" class="headings">General Reports</div>
-  <br>
-  <div style="height:75%;background:#83831F;" class="headings">
-    Current ART Sites<br>
-
-  </div>
+<div style="width: 15%;height:90%;margin-top: -10px;float: left;" class="divider">
+  <table width="100%" cellspacing="0px" cellpadding="5px" style="margin-top: 5px;" >
+    <tr>
+      <td>
+        <img class="icons"  src="/images/Hospital-icon.png" alt="">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img class="icons"  src="/images/pills3.png" alt="">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img class="icons"  src="/images/user_management_icon.png" alt="">
+      </td>
+    </tr>
+  </table>
 </div>
-<div class="col2outer">
-  <div class="col3">
-    <div style="background: #330000;text-align: center;" class="headings">Site Reports</div>
-    <br>
-    <div style="height:75%;background: #330000;" class="headings">
-      Annual Reports<br>
-      Quarterly Report <br>
-      Monthly Report <br>
-      Custom Report <br>
-    </div>
-  </div>
-  <div class="col2">
-    <div style="background: #0F3B5F;text-align: center;" class="headings">Aggregated Reports</div>
-    <br>
-    <div style="height:75%;background: #0F3B5F;" class="headings">
-      Annual Reports<br>
-      Quarterly Report <br>
-      Monthly Report <br>
-      Custom Report <br>
-    </div>
-  </div>
+<div style="width: 84.5%;height:90%;margin-top: -10px;float: right;border: 0px;" class="divider">
+
 </div>
