--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -5,3 +5,111 @@
  *= require_self
  *= require_tree .
 */
+
+div.divider{
+    height:100%;
+    float:left;
+    border:1px solid black;
+    overflow:auto;
+    border-width: 0px 1px 0px 0px;
+}
+html, body {
+    margin:0;
+    padding:0;
+    height:100%
+}
+h1, p { margin:0 0 1em }
+#header {
+    position:fixed;
+    min-width:1050px;
+    left:0;
+    top:0;
+    background: #15191C;
+    height:100px;
+    width: 100%;
+}
+#footer {
+    bottom:0;
+    top:auto;
+    position:fixed;
+    min-width:1050px;
+    left:0;
+    background:#15191C;
+    height:50px;
+    width: 100%;
+}
+#content {
+    position:absolute;
+    top:100px;
+    bottom:50px;
+    min-width:1050px;
+    background:#ffffff;
+    overflow:auto;
+    width: 100%;
+}
+
+td.link{
+
+    color: #92CD00;
+    font-size: 23px;
+    height: 30px;
+    width: 150px;
+    font-family: arial;
+    cursor: pointer;
+    border-width: 0px 0px 0px 1px;
+    border-style: solid;
+    border-color: #f5f5f5;
+    text-align: center;
+}
+.link:hover{
+    background-color: silver;
+    color: #000000;
+}
+table.menu{
+    float: right;
+    height: 100%;
+    min-width: 100px;
+    width: 50%;
+}
+
+img.icons
+{
+    height: 125px;
+    width : 150px;
+}
+
+button.main
+{
+    background-color: #15191C;
+    color: graytext;
+    border: 4px solid gray;
+    height: 40px;
+
+}
+
+.main:hover{
+    color: #ffffff;
+}
+
+div.main_container
+{
+    font-family: arial;
+    font-size: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #000000;
+    width: 70%;
+    margin-top: 50px;
+    border-radius: 15px;
+
+
+}
+
+button.sub_main
+{
+    background-color: #15191C;
+    color: graytext;
+    border: 2px solid gray;
+    height: 40px;
+
+}
