--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,208 +1,5 @@
-<script type="text/javascript" src="/javascripts/jquery-1.8.2.js"></script>
-<script src="/javascripts/highcharts.js"></script>
-<script src="/javascripts/exporting.js"></script>
-<script src="/javascripts/standalone-framework.src.js"></script>
 
-
-<script type="text/javascript">
-    <!--
-       function graph()
-       {
-            /*
-            var image = document.getElementById('pic');
-            var data = image.getAttribute('src');
-            var pics = ['/images/view_doc.png','/images/rails.png', '/images/download.png']
-            var i = pics.indexOf(data);
-            image.setAttribute("src", pics[((i+1)%3)])
-           */
-
-           var graph = parseInt((Math.random() * 10) % 3);
-
-
-
-               if (graph == 0)
-                   line_graph();
-               else if (graph == 1)
-                   stacked_bar_graph();
-               else
-                   pie_chart();
-
-
-
-       };
-
-       function line_graph()
-       {
-         try{
-
-             var chart = new Highcharts.Chart({
-                 chart: {
-                     renderTo: 'graph'
-                 },
-
-                 xAxis: {
-                     categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun',
-                         'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']
-                 },
-
-                 series: [{
-                     data: [29.9, 71.5, 106.4, 129.2, 144.0, 176.0, 135.6, 148.5, 216.4, 194.1, 95.6, 54.4]
-                 }]
-
-             });
-
-
-         }
-         catch(ex)
-         {
-             alert('error in jQuery call:' + ex);
-         }
-       } ;
-
-       function stacked_bar_graph()
-       {
-         try{
-           var chart = new Highcharts.Chart({
-               chart: {
-                   type: 'column',
-                   renderTo: 'graph'
-               },
-               title: {
-                   text: 'Stacked column chart'
-               },
-               xAxis: {
-                   categories: ['Apples', 'Oranges', 'Pears', 'Grapes', 'Bananas']
-               },
-               yAxis: {
-                   min: 0,
-                   title: {
-                       text: 'Total fruit consumption'
-                   },
-                   stackLabels: {
-                       enabled: true,
-                       style: {
-                           fontWeight: 'bold',
-                           color: (Highcharts.theme && Highcharts.theme.textColor) || 'gray'
-                       }
-                   }
-               },
-               legend: {
-                   align: 'right',
-                   x: -70,
-                   verticalAlign: 'top',
-                   y: 20,
-                   floating: true,
-                   backgroundColor: (Highcharts.theme && Highcharts.theme.legendBackgroundColorSolid) || 'white',
-                   borderColor: '#CCC',
-                   borderWidth: 1,
-                   shadow: false
-               },
-               tooltip: {
-                   formatter: function() {
-                       return '<b>'+ this.x +'</b><br/>'+
-                               this.series.name +': '+ this.y +'<br/>'+
-                               'Total: '+ this.point.stackTotal;
-                   }
-               },
-               plotOptions: {
-                   column: {
-                       stacking: 'normal',
-                       dataLabels: {
-                           enabled: true,
-                           color: (Highcharts.theme && Highcharts.theme.dataLabelsColor) || 'white'
-                       }
-                   }
-               },
-               series: [{
-                   name: 'John',
-                   data: [5, 3, 4, 7, 2]
-               }, {
-                   name: 'Jane',
-                   data: [2, 2, 3, 2, 1]
-               }, {
-                   name: 'Joe',
-                   data: [3, 4, 4, 2, 5]
-               }]
-           });
-
-         }
-         catch(ex)
-         {
-             alert('error in jQuery call:' + ex);
-         }
-       };
-
-
-       function pie_chart()
-       {
-
-         try{
-
-             // Build the chart
-             var chart = new Highcharts.Chart({
-                 chart: {
-                     plotBackgroundColor: null,
-                     plotBorderWidth: null,
-                     plotShadow: false,
-                     renderTo: 'graph'
-                 },
-                 title: {
-                     text: 'Browser market shares at a specific website, 2010'
-                 },
-                 tooltip: {
-                     pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
-                 },
-                 plotOptions: {
-                     pie: {
-                         allowPointSelect: true,
-                         cursor: 'pointer',
-                         dataLabels: {
-                             enabled: true,
-                             color: '#000000',
-                             connectorColor: '#000000',
-                             formatter: function() {
-                                 return '<b>'+ this.point.name +'</b>: '+ this.percentage +' %';
-                             }
-                         }
-                     }
-                 },
-                 series: [{
-                     type: 'pie',
-                     name: 'Browser share',
-                     data: [
-                         ['Firefox',   45.0],
-                         ['IE',       26.8],
-                         {
-                             name: 'Chrome',
-                             y: 12.8,
-                             sliced: true,
-                             selected: true
-                         },
-                         ['Safari',    8.5],
-                         ['Opera',     6.2],
-                         ['Others',   0.7]
-                     ]
-                 }]
-             });
-
-
-            }
-            catch(ex)
-            {
-               alert('error in jQuery call:' + ex);
-            }
-       };
-
-       function donut_chart()
-       {
-         $(function(){
-
-         });
-       }
-    //-->
-</script>
-
-<div onload="graph()" style="width: 100%">
+<div style="width: 100%">
   <table style="width: 100%;" cellspacing="15px">
     <tr>
       <td style="vertical-align: top;text-align:justify;margin-left: 10px;font-family: arial;font-size:30px;">
@@ -211,17 +8,11 @@
         statistics are calculated and made available here. Various reports are also available under our publications section.
       </td>
       <td style="width: 55%;">
-        <div  id="graph" style="border: 1px solid #000000; border-radius:10px;height: 600px;">
-
+        <div  style="height: 600px;">
+            <%= render "graph" %>
         </div>
       </td>
     </tr>
   </table>
 </div>
 
-<script type="text/javascript">
- <!--
-    setInterval("graph()", 2000);
- //-->
-
-</script>
