--- a/app/views/administration/index.html.erb
+++ b/app/views/administration/index.html.erb
@@ -1,26 +1,26 @@
 <script type="text/javascript">
 
-    function publicationMenu()
+    function siteMenu()
     {
         var path = ["/publication/new", "/publication/edit"];
         var icons = ['view_doc.png','publications.png'];
-        var title = ['Add Publication', 'Edit Publication'];
+        var title = ['ARV Sites', 'Edit Publication'];
         loadMenu(title,icons,path);
     }
 
-    function userMenu()
+    function drugMenu()
+    {
+        var path = ["/user/create", "/user/edit"];
+        var icons = ['add_user.png','edit_user.png'];
+        var title = ["", "Edit User"];
+        loadMenu(title,icons,path);
+    }
+
+    function aggregatesMenu()
     {
         var path = ["/user/create", "/user/edit"];
         var icons = ['add_user.png','edit_user.png'];
         var title = ["Add User", "Edit User"];
-        loadMenu(title,icons,path);
-    }
-
-    function siteMenu()
-    {
-        var path = [];
-        var icons = [];
-        var title = [];
         loadMenu(title,icons,path);
     }
 
@@ -59,40 +59,38 @@
         }
     }
 
-    setTimeout("publicationMenu()", 200);
+    setTimeout("siteMenu()", 200);
 </script>
+
 <style type="text/css">
-  td{
-      text-align: center;
-  }
-  td:hover{
-    background-color: blue;
-  }
+
+    td{
+        text-align: center;
+    }
 </style>
-<div style="width: 100%;height: 100%;">
 
-  <div style="width: 15%; text-align: center;" class="divider">
-      <table width="100%" cellspacing="0px" cellpadding="5px" style="margin-top: 5px;">
-        <tr>
-          <td>
-            <img class="icons" onmousedown="publicationMenu()" src="/images/publications.png" alt="">
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img class="icons" onmousedown="siteMenu()" src="/images/Hospital-icon.png" alt="">
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <img class="icons" onmousedown="userMenu()" src="/images/user_management_icon.png" alt="">
-          </td>
-        </tr>
-      </table>
-  </div>
+<div style="margin-top: 0px;border: 1px solid #000000; border-width:1px 0px 0px 0px;">
+  <table width="100%" cellspacing="0px" >
+    <tr>
+      <td width="200px">
+        <img class="icons" onmousedown="siteMenu()"  src="/images/Hospital-icon.png" alt="">
+      </td>
+      <td rowspan="3">
+        <div id='panel' style="height:690px;overflow: auto;border: 1px solid #000000;border-width:0px 0px 0px 1px; ">
+          fdg
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img class="icons" onmousedown="drugMenu()" src="/images/pills3.png" alt="">
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <img class="icons" onmousedown="aggregatesMenu()" src="/images/user_management_icon.png" alt="">
+      </td>
+    </tr>
+  </table>
 
-  <div id="panel" style="width:84%;float:right; " class="divider">
-
-
-  </div>
 </div>
