--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -1,3 +1,52 @@
+<script type="text/javascript">
+
+    function siteMenu()
+    {
+        var path = ["/report/site_list", "/report/report_menu?type='drug_report'",
+                    "/report/report_menu?type='site_report'","/report/report_menu?type='aggregate_report'"];
+        var icons = ['view_doc.png','pills3.png','Hospital-icon.png','rails.png'];
+        var title = ['ARV Sites', 'Drug Report', 'Site Report', 'Aggregate Report'];
+        loadMenu(title,icons,path);
+    }
+
+    function loadMenu(fields, images,paths){
+        document.getElementById("panel").innerHTML = "";
+
+        for(var i = 0; i < fields.length; i++){
+
+            var div = document.createElement("div");
+            div.style.width = "200px";
+            div.style.height = "160px";
+            div.style.textAlign = "center";
+            div.style.cssFloat = "left";
+            div.style.padding = "5px";
+            div.style.opacity = "1";
+            div.style.cursor = "pointer";
+            div.setAttribute("link", paths[i]);
+            div.className = "menu_button blue";
+
+            div.onclick = function(){
+                window.location = this.getAttribute("link");
+            }
+
+            document.getElementById("panel").appendChild(div);
+
+            var img = document.createElement("img");
+            img.src = "/images/" + images[i];
+            img.setAttribute("alt", fields[i]);
+            img.height = "90";
+            img.style.margin = "5px";
+
+            div.appendChild(img);
+
+            div.innerHTML += "<div style='padding: 5px; margin-top: 10px;'>" + fields[i] + "</div>";
+
+        }
+    }
+
+    setTimeout("siteMenu()", 200);
+</script>
+
 <style type="text/css">
 
     td{
@@ -5,30 +54,11 @@
     }
 </style>
 
-<div style="width: 100%; text-align: center;font-size: 30px;margin-top: 10px;font-family: arial;font-weight: bold;">
-    Report Categories
-  <hr>
-</div>
 
-<div style="width: 15%;height:90%;margin-top: -10px;float: left;" class="divider">
-  <table width="100%" cellspacing="0px" cellpadding="5px" style="margin-top: 5px;" >
-    <tr>
-      <td>
-        <img class="icons"  src="/images/Hospital-icon.png" alt="">
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <img class="icons"  src="/images/pills3.png" alt="">
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <img class="icons"  src="/images/user_management_icon.png" alt="">
-      </td>
-    </tr>
-  </table>
-</div>
-<div style="width: 84.5%;height:90%;margin-top: -10px;float: right;border: 0px;" class="divider">
+
+<div id='panel' style="height:700px; overflow:auto;">
+
 
 </div>
+
+
