--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -16,34 +16,36 @@ div.divider{
 html, body {
     margin:0;
     padding:0;
-    height:100%
+    height:100%;
+    min-width:1048px;
 }
 h1, p { margin:0 0 1em }
 #header {
     position:fixed;
-    min-width:1050px;
     left:0;
     top:0;
     background: #15191C;
     height:100px;
+    min-width: 1048px;
     width: 100%;
 }
-#footer {
+div.heading{
+    background: #15191C;
+
+}
+div.footer {
     bottom:0;
     top:auto;
     position:fixed;
-    min-width:1050px;
     left:0;
     background:#15191C;
     height:50px;
+    min-width: 1048px;
     width: 100%;
 }
-#content {
-    position:absolute;
+div.content {
     top:100px;
     bottom:50px;
-    min-width:1050px;
-    background:#ffffff;
     overflow:auto;
     width: 100%;
 }
@@ -52,6 +54,7 @@ td.link{
 
     color: #92CD00;
     font-size: 23px;
+    font-weight: bold;
     height: 30px;
     width: 150px;
     font-family: arial;
@@ -66,10 +69,9 @@ td.link{
     color: #000000;
 }
 table.menu{
-    float: right;
     height: 100%;
     min-width: 100px;
-    width: 50%;
+    width: 100%;
 }
 
 img.icons
