added report templates

--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -2,8 +2,8 @@
 
     function siteMenu()
     {
-        var path = ["/report/site_list", "/report/report_menu?type='drug_report'",
-                    "/report/report_menu?type='site_report'","/report/report_menu?type='aggregate_report'"];
+        var path = ["/report/site_list", "/report/report_menu?type=drug report",
+                    "/report/report_menu?type=site report","/report/report_menu?type=aggregate report"];
         var icons = ['view_doc.png','pills3.png','Hospital-icon.png','rails.png'];
         var title = ['ARV Sites', 'Drug Report', 'Site Report', 'Aggregate Report'];
         loadMenu(title,icons,path);
