--- a/app/views/report/drug_report.html.erb
+++ b/app/views/report/drug_report.html.erb
@@ -1,42 +1,119 @@
+<link rel="stylesheet" type="text/css" href="/stylesheets/demo_table.css" />
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
+<script src="/javascripts/highcharts.js"></script>
+<script src="/javascripts/exporting.js"></script>
+<script src="/javascripts/standalone-framework.src.js"></script>
 
+<script type="text/javascript" charset="utf-8">
+    $(document).ready(function() {
+        $('#drugs').dataTable({
+            "aaSorting": [[ 0, "asc" ]],
+            'iDisplayLength': 30,
+            "bLengthChange": false,
+            "bFilter": false
+        });
+    } );
+</script>
+
+<script type="text/javascript">
+  function pie_graph()
+  {
+      try{
+          // Build the chart
+          var chart = new Highcharts.Chart({
+              chart: {
+                  plotBackgroundColor: null,
+                  plotBorderWidth: null,
+                  plotShadow: false,
+                  renderTo: 'pie'
+              },
+              title: {
+                  text: 'Dispensation Vs Prescription'
+              },
+              tooltip: {
+                  pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+              },
+              plotOptions: {
+                  pie: {
+                      allowPointSelect: true,
+                      cursor: 'pointer',
+                      dataLabels: {
+                          enabled: true,
+                          color: '#000000',
+                          connectorColor: '#000000',
+                          formatter: function() {
+                              return '<b>'+ this.point.name +'</b>: '+ this.percentage.toFixed(2) +' %';
+                          }
+                      }
+                  }
+              },
+              series: [{
+                  type: 'pie',
+                  text: 'Dispensation Vs Prescription',
+                  name: 'Dispensation Vs Prescription',
+                  data: [["Prescriptions", <%=@prescription %>],["Dispensations", <%=@dispensation %>]]
+
+
+              }],
+              exporting: { enabled: false },
+              credits: {enabled: false}
+          });
+
+
+      }
+      catch(ex)
+      {
+          alert('PIE error in jQuery call:' + ex);
+      }
+  }
+  setTimeout("pie_graph()",20);
+</script>
+<style type="text/css">
+    div.graph{
+        border: 1px solid #15191C;
+        width: 100%;
+        height: 370px;
+    }
+</style>
 <div style="width: 100%;text-align: center;">
-    <table border="1" style="width: 100%;">
+    <table  style="width: 100%;">
         <tr>
             <td width="50%">
-                <div style="width: 100%; height: 370px;">
+                <div id="trends" class="graph">
 
                 </div>
             </td>
             <td>
-                <div style="width: 100%; height: 370px;">
+                <div id="pie" class="graph">
 
                 </div>
             </td>
         </tr>
-        <tr>
-           <td width="50%">
-             <div style="width: 100%; height: 370px;">
-
-             </div>
-           </td>
-           <td>
-             <div style="width: 100%; height: 370px;">
-
-             </div>
-           </td>
-        </tr>
     </table>
 </div>
-
+<br>
 <div style="width: 100%;text-align: center;">
-<table border="1" style="width: 100%;">
-    <tr>
-      <th>Date</th>
-      <th>Amount Prescribed</th>
-      <th>Amount Dispensed</th>
-      <th>Difference</th>
-    </tr>
-    <tr>
+  <table class="display" id="drugs" width="100%">
+    <thead>
+        <tr>
+          <th>Date</th>
+          <th>Amount Prescribed</th>
+          <th>Amount Dispensed</th>
+          <th>Difference</th>
+        </tr>
+    </thead>
+    <tbody>
+    <% (@values || []).each do |day, value|%>
+        <tr>
+          <td><%= day.strftime('%d %B %Y') %></td>
+          <td><%= value["prescription"] %></td>
+          <td><%= value["dispensation"] %></td>
+          <td><%= value["prescription"] - value["dispensation"] %></td>
+        </tr>
+    <% end %>
+    </tbody>
+
 </table>
 
 </div>
