--- a/app/views/publication/new.html.erb
+++ b/app/views/publication/new.html.erb
@@ -1,3 +1,106 @@
-<%= form_for @publications do |f| %>
-    <%= f.file_field :picture %>
-<% end %>
+
+<script language="javascript" type="text/javascript" src="/javascripts/calendar.js"></script>
+<style type="text/css">
+    input{
+        width: auto;
+        font-size: 28px;
+    }
+    button{
+        width: auto;
+        font-size: 28px;
+    }
+    table.halfpage{
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .halfpage tr{
+        height: 80px;
+
+    }
+    .halfpage caption{
+        font-weight:bold;
+    }
+</style>
+
+
+<div class="main_container">
+
+  <table class="halfpage" cellspacing="10px" cellpadding="20px">
+    <form method="post" action="/publication/save" >
+      <caption style="font-family: arial;font-size:34px;">New Publication Details</caption>
+      <tr>
+        <td id="title_lbl">Publication Title</td>
+        <td><input type="text" name="article_name" id='title'></td>
+      </tr>
+      <tr>
+        <td id='author_lbl'>Author</td>
+        <td><input name="author" type="text" id='name'></td>
+      </tr>
+      <tr>
+        <td id="pub_date_lbl">Year of Publishing</td>
+        <td><input id="pub_date" type="text" onclick="var y = (new Date()).getFullYear(); loadCalendar(this.id,y-10, y+1, false); checkDate(this.id)" name="publish_date" value=""></td>
+      </tr>
+      <tr>
+        <td id='path_lbl'>Select File</td>
+        <td>
+          <input id="upload_path" type="file" name="publication[datafile]" />
+          <input type="hidden" id="upload_path_url" name="upload_path_url" />
+
+        </td>
+      </tr>
+    </form>
+    <tr>
+      <td colspan="2" style="text-align: center;">
+        <button onclick="verify_form();" style="width: 300px;height:60px;border-radius: 30px;" class="main">Save</button>
+      </td>
+    </tr>
+  </table>
+
+</div>
+
+<script type="text/javascript">
+    <!--
+    function verify_form()
+    {
+
+        var title = document.getElementById('title').value;
+        var name = document.getElementById('name').value;
+        var date = document.getElementById('pub_date').value;
+        var path = document.getElementById('upload_path').value;
+
+        if (title.trim() == "")
+        {
+            highlight('title_lbl',true);
+            jAlert("A publication should always have a title", "Incomplete Information");
+        }
+        else if (name.trim() == "")
+        {
+            jAlert("A publication should always have an author", "Incomplete Information");
+            highlight('author_lbl',true);
+        }
+        else if (date.trim() == "")
+        {
+            jAlert("A publication should always have a publishing date", "Incomplete Information");
+            highlight('pub_date_lbl',true);
+        }
+        else if (path.trim() == "")
+        {
+            jAlert("A publication was not uploaded", "Incomplete Information");
+            highlight('path_lbl',true);
+        }
+        else
+        {
+            __$("upload_path_url").value = __$("upload_path").value;
+            document.forms[0].submit();
+        }
+
+
+    }
+    //-->
+</script>
+
+
+
+
