--- a/app/views/report/site_report.html.erb
+++ b/app/views/report/site_report.html.erb
@@ -1,35 +1,17 @@
+<link rel="stylesheet" type="text/css" href="/stylesheets/demo_table.css" />
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.js"></script>
+<script type="text/javascript" language="javascript" src="/javascripts/jquery.dataTables.js"></script>
+<script src="/javascripts/highcharts.js"></script>
+<script src="/javascripts/exporting.js"></script>
+<script src="/javascripts/standalone-framework.src.js"></script>
 
 <div style="width: 100%;text-align: center;">
-   <table border="1" style="width: 100%;">
-     <tr>
-       <td width="50%">
-         <div style="width: 100%; height: 370px;">
 
-         </div>
-       </td>
-       <td>
-         <div style="width: 100%; height: 370px;">
-
-         </div>
-       </td>
-     </tr>
-     <tr>
-       <td width="50%">
-         <div style="width: 100%; height: 370px;">
-
-         </div>
-       </td>
-       <td>
-         <div style="width: 100%; height: 370px;">
-
-         </div>
-       </td>
-     </tr>
-   </table>
 </div>
 
 <div style="width: 100%;text-align: center;">
-  <table border="1" style="width: 100%;">
+  <table class="display" id="drugs" width="100%">
+    <thead>
     <tr>
       <th>Date</th>
       <th>Drug</th>
@@ -37,6 +19,22 @@
       <th>Amount Dispensed</th>
       <th>Difference</th>
     </tr>
+    </thead>
+    <tbody>
+    <% (@values || []).each do |day, drugs|%>
+        <% (drugs || []).each do |drug, value|%>
+            <tr>
+              <td><%= day.strftime('%d %B %Y') %></td>
+              <td><%= drug %></td>
+              <td><%= value["prescription"] %></td>
+              <td><%= value["dispensation"] %></td>
+              <td><%= value["prescription"] - value["dispensation"] %></td>
+            </tr>
+        <% end %>
+    <% end %>
+    </tbody>
+
   </table>
+
 
 </div>
