added application logo

--- a/app/views/layouts/unlogged.html.erb
+++ b/app/views/layouts/unlogged.html.erb
@@ -72,7 +72,7 @@
            <span style="font-size: 45px;color: #C0C0C0;font-family:arial;">
             Drug Monitoring Program
           </span>
-  <img src="/images/rails.png" style="float: left;margin-top: 5px;margin-left: 5px;">
+  <img src="/images/app.png" style="float: left;margin-top: 5px;margin-left: 5px;height: 80px;">
 </div>
 
 <div id="content">
