--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 <div class="heading" >
   <table class="menu" cellspacing="0px">
     <tr>
-      <td style="width: 60px;"><img src="/images/rails.png" style="float: left;margin-top: 5px;margin-left: 5px;"></td>
+      <td style="width: 60px;"><img src="/images/app.png" style="float: left;margin-top: 5px;margin-left: 5px;height:60px;"></td>
       <td style="text-align: left;vertical-align: text-top;">
         <span style="font-size: 35px;color: #C0C0C0;font-family:arial;">
             Drug Monitoring Program
