--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -20,7 +20,7 @@
          image.setAttribute("src", pics[((i+1)%3)])
          */
 
-        var graph = parseInt((Math.random() * 10) % 3);
+        var graph = parseInt((Math.random() * 10) % 2);
 
         if (graph == 0)
         {
@@ -29,13 +29,13 @@
         }
         else if (graph == 1)
         {
-            sort_line();
-            stacked_bar_graph();
+            sort_pie();
+            pie_chart()
         }
         else
         {
-            sort_pie();
-            pie_chart();
+            sort_line();
+            stacked_bar_graph();
         }
     };
 
@@ -287,7 +287,7 @@
 <script type="text/javascript">
     <!--
     setTimeout("graph()", 300);
-    setInterval("graph()", 3000);
+    setInterval("graph()", 9000);
     //-->
 
 </script>
