added icon for aggregate report

--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -4,7 +4,7 @@
     {
         var path = ["/report/site_list", "/report/report_menu?type=drug report",
                     "/report/report_menu?type=site report","/report/report_menu?type=aggregate report"];
-        var icons = ['view_doc.png','pills3.png','Hospital-icon.png','rails.png'];
+        var icons = ['view_doc.png','pills3.png','Hospital-icon.png','aggregate.png'];
         var title = ['ARV Sites', 'Drug Report', 'Site Report', 'Aggregate Report'];
         loadMenu(title,icons,path);
     }
