Worked on reports and icons

--- a/app/views/administration/index.html.erb
+++ b/app/views/administration/index.html.erb
@@ -3,7 +3,7 @@
     function loadIcons()
     {
         var path = ["/publication/new", "/publication/edit","/administration/add_site","/administration/list_sites","/user/create", "/user/edit"];
-        var icons = ['view_doc.png','publications.png','Hospital-icon.png','Hospital-icon.png','add_user.png','edit_user.png'];
+        var icons = ['add_publication.png','edit_publication.png','add_site.png','Hospital-icon.png','add_user.png','edit_user.png'];
         var title = ["Add New Publication","Edit Publication","Add Site","Edit Sites","Add User", "Edit User"];
         loadMenu(title,icons,path);
     }
