--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
       <td class="link" onmousedown="window.location='/'">Home</td>
       <td class="link" onmousedown="window.location= '/report/index'">Report</td>
       <td class="link" onmousedown="window.location='/publication/index'">Publications</td>
-      <td class="link" onmousedown="window.location='/administration/index'" >Administration</td>
+      <%if User.current.user_role.role.role != 'Other' %>
+        <td class="link" onmousedown="window.location='/administration/index'" >Administration</td>
+       <% end %>
       <td class="link" onmousedown="window.location= '/user/logout'">Logout</td>
     </tr>
   </table>
