--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -280,7 +280,10 @@
     //-->
 </script>
 
-<div onLoad="graph()"  id="graph" style="border: 1px solid #000000; border-radius:10px;height: 100%;width: 100%;">
+<div style="border: 1.5px solid #000000; border-radius:10px;height: 100%;width: 100%;">
+  <div onLoad="graph()"  id="graph" style="height: 98%;width: 100%;">
+
+  </div>
 
 </div>
 
